--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,9 @@
 *.dll
 *.so
 *.dylib
+nvim-release-watcher.linux
+nvim-release-watcher.darwin-arm64
+nvim-release-watcher.darwin-x86_64
 
 # Test binary, built with `go test -c`
 *.test
